# SimplifiedCLI

./: README.md  pyproject.toml  tox.ini
src/examples/: basic.py
src/simpcli/: __init__.py
test/: conftest.py  test_simpcli.py
