[project]
name = "simpcli"
#version = ""  # Defined by setuptools_scm
description = "A simplified command line interface."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "tox>=4.32.0",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# https://docs.astral.sh/ruff/settings/
fix = true
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "FIX002",
    "TD003",
]

[tool.ruff.lint.per-file-ignores]
"src/examples/*" = [
    "INP001",
    "T201",
]
"test/*" = [
    "INP001",
    "S101",
]

[tool.ruff.lint.isort]
force-single-line = true
required-imports = ["from __future__ import annotations"]
